added font, added record score, added load screen, menu update

--- a/bin-debug/Main.css
+++ b/bin-debug/Main.css
@@ -2,103 +2,6 @@
 @font-face
 {
 	fontFamily: "Heavy Heap";
-	src: url("C:\Windows\Fonts\Arial.ttf");
+	src: url("C:\Windows\Fonts\HeavyHeap.ttf");
 	embedAsCFF: true;
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
